# pit_viper

./: .gitignore  README.md  pyproject.toml
pit_viper/: __main__.py
pit_viper/ingestion/: base.py  bonds.py  commodities.py  crypto.py  equities.py  funds.py
pit_viper/orchestration/: advice_job.py  chatgpt.py
pit_viper/processing/: feature_pipeline.py  portfolio.py  scoring.py
pit_viper/sentiment/: news.py  social.py
pit_viper/utils/: config.py  storage.py
tests/: test_advice_job.py
