[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pit-viper"
version = "0.1.0"
description = "End-to-end investment intelligence pipeline"
authors = [{name = "Pit Viper"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "vaderSentiment>=3.3",
    "openai>=1.10",
    "pyarrow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
pit-viper = "pit_viper.__main__:main"
